--- a/index.html
+++ b/index.html
@@ -361,6 +361,10 @@
         <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=tatacliq.com" alt="TataCliq" onerror="this.style.display='none'">
         <span>Tata CLiQ</span>
       </div>
+      <div class="app-btn" data-url="https://www.lenskart.com">
+        <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=lenskart.com" alt="Lenskart" onerror="this.style.display='none'">
+        <span>Lenskart</span>
+      </div>
     </div>
   </section>
 
@@ -582,6 +586,16 @@
         <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=edx.org" alt="edX" onerror="this.style.display='none'">
         <span>edX</span>
       </div>
+      <div class="app-btn" data-url="https://intellipaat.com">
+        <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=intellipaat.com" alt="Intellipaat" onerror="this.style.display='none'">
+        <span>Intellipaat</span>
+      </div>
+
+      <div class="app-btn" data-url="https://www.simplilearn.com">
+        <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=simplilearn.com" alt="Simplilearn" onerror="this.style.display='none'">
+        <span>Simplilearn</span>
+      </div>
+
     </div>
   </section>
 
