--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
       width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,#64748b,#111827);display:inline-flex;align-items:center;justify-content:center;color:#fff;font-weight:700;font-size:16px;
     }
   </style>
+  <script>
+  try {
+    if (sessionStorage.getItem("harDilSplash") !== "done") {
+      window.location.replace("splash.html");
+    }
+  } catch (e) {}
+</script>
+
 </head>
 
 <body>
