--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
   <!-- Google Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
+  
+  <!-- YOUR CSS (CACHE BUSTED) -->
+  <link rel="stylesheet" href="style.css?v=final">
+  
   <style>
     /* Basic / Layout */
     * { box-sizing: border-box; font-family: Inter, system-ui, sans-serif; }
