--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- YOUR CSS (CACHE BUSTED) -->
- <link rel="stylesheet" href="style.css?v=bg37">
+ <link rel="stylesheet" href="style.css?v=icon68">
   
   <style>
     /* Basic / Layout */
