--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
   <!-- 🚕 RIDES -->
   <section class="card" id="rides">
     <h2>🚕 Rides</h2>
+       <p class="section-sub">Book cabs, bikes & daily commute rides</p>
     <div class="grid">
       <div class="app-btn" data-url="https://www.uber.com">
         <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=uber.com" alt="Uber" onerror="this.style.display='none'">
@@ -450,7 +451,7 @@
   <!-- 🍔 FOOD -->
   <section class="card" id="food">
     <h2>🍔 Food</h2>
-    <p class="section-sub">Delivery & restaurants</p>
+    <p class="section-sub">Order food & explore nearby restaurants</p>
     <div class="grid">
       <div class="app-btn" data-url="https://www.zomato.com">
         <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=zomato.com" alt="Zomato" onerror="this.style.display='none'">
@@ -487,6 +488,7 @@
   <!-- 🛒 GROCERY -->
   <section class="card" id="grocery">
     <h2>🛒 Grocery & Essentials</h2>
+    <p class="section-sub">Daily groceries, essentials & home needs</p>
     <div class="grid">
       <div class="app-btn" data-url="https://blinkit.com">
         <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=blinkit.com" alt="Blinkit" onerror="this.style.display='none'">
@@ -545,6 +547,7 @@
   <!-- 🏏 SPORTS -->
   <section class="card" id="sports">
     <h2>🏏 Sports</h2>
+      <p class="section-sub">Live scores, updates & sports content</p>
     <div class="grid">
       <div class="app-btn" data-url="https://www.cricbuzz.com">
         <img loading="lazy" src="https://www.google.com/s2/favicons?sz=128&domain=cricbuzz.com" alt="Cricbuzz" onerror="this.style.display='none'">
