--- a/index.html
+++ b/index.html
@@ -1,102 +1,30 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>HarDil</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#020617" />
   <meta name="description" content="HarDil – Family First · One Place for Everything" />
 
   <!-- Google Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
 
-  <style>
-    /* Basic / Layout */
-    * { box-sizing: border-box; font-family: Inter, system-ui, sans-serif; }
-    html,body { height: 100%; margin: 0; background: #020617; color: #e6eef8; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
+  <!-- External CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    /* Top app bar */
-    .top-app-bar {
-      position: sticky;
-      top: 0;
-      z-index: 40;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      padding:12px 14px;
-      background: linear-gradient(90deg, rgba(3,7,23,0.85), rgba(8,12,30,0.85));
-      backdrop-filter: blur(8px);
-      border-bottom: 1px solid rgba(255,255,255,0.03);
-    }
-    .top-app-title { font-weight:700; font-size:18px; display:inline-flex; align-items:center; gap:8px; }
-    .top-actions { display:flex; gap:10px; align-items:center; }
-    .top-actions a { color: rgba(230,238,248,0.88); font-size:13px; text-decoration:none; opacity:0.9; padding:6px 8px; border-radius:8px; }
-    .top-actions a:hover { background: rgba(255,255,255,0.03); }
-
-    .menu-icon { cursor:pointer; font-size:20px; padding:6px; border-radius:8px; }
-    .menu-icon:hover { background: rgba(255,255,255,0.03); }
-
-    /* Drawer */
-    .drawer { position: fixed; left: -320px; top:0; bottom:0; width:280px; background: linear-gradient(180deg,#061126,#0b1530); color:#dbeafe; box-shadow: 24px 12px 48px rgba(0,0,0,0.6); transition:left .28s cubic-bezier(.2,.9,.2,1); z-index:50; padding:14px; overflow:auto; }
-    .drawer.open { left: 10px; }
-    .drawer-header { display:flex; justify-content:space-between; align-items:center; padding-bottom:8px; border-bottom: 1px solid rgba(255,255,255,0.03); margin-bottom:12px; }
-    .drawer-header strong { font-size:18px; }
-    .drawer-header button { background:transparent; border:none; color:#e6eef8; font-size:20px; cursor:pointer; }
-    .drawer-content h4 { margin: 10px 0 6px; font-size:13px; color:#93c5fd; }
-    .drawer-content a { display:block; color:#dbeafe; text-decoration:none; padding:8px 6px; border-radius:8px; margin-bottom:4px; font-size:14px; }
-    .drawer-content a:hover { background: rgba(255,255,255,0.02); }
-
-    /* Backdrop */
-    .backdrop { position:fixed; inset:0; background:rgba(0,0,0,0.45); opacity:0; pointer-events:none; transition: opacity .18s ease; z-index:45; }
-    .backdrop.show { opacity:1; pointer-events:auto; }
-
-    /* Hero */
-    .hero { padding:20px 16px 12px; text-align:center; color:#e6eef8; }
-    .hero h1 { margin:0; font-size:28px; letter-spacing:1px; }
-    .hero p { margin:6px 0 0; font-size:14px; color:#a5b4fc; }
-
-    /* Main layout */
-    main.app { padding: 14px; padding-bottom:120px; max-width:1000px; margin: 0 auto; }
-
-    .card { background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02)); border-radius:14px; padding:12px; margin-bottom:14px; box-shadow: 0 6px 20px rgba(0,0,0,0.45); border:1px solid rgba(255,255,255,0.02); }
-    .card h2 { margin:0 0 12px; font-size:16px; color:#eef2ff; display:flex; align-items:center; gap:10px; }
-    .card p.section-sub { margin:0 0 12px; color:#9fb7ff; font-size:13px; }
-
-    .grid { display:grid; grid-template-columns: repeat(4, 1fr); gap:10px; }
-    @media (max-width:720px) { .grid { grid-template-columns: repeat(3, 1fr); } }
-    @media (max-width:420px) { .grid { grid-template-columns: repeat(2, 1fr); } }
-
-    .app-btn { background: rgba(255,255,255,0.03); border-radius:12px; padding:10px 8px; display:flex; flex-direction:column; align-items:center; gap:8px; cursor:pointer; transition: transform .12s ease, box-shadow .12s ease; border:1px solid rgba(255,255,255,0.02); }
-    .app-btn:hover { transform: translateY(-6px); box-shadow:0 12px 30px rgba(0,0,0,0.6); }
-    .app-btn img { width:44px; height:44px; border-radius:10px; background:#fff; object-fit:cover; }
-    .app-btn span { font-size:12px; color:#e6eef8; text-align:center; }
-
-    footer.footer { text-align:center; padding:26px 10px; color:#9fb7ff; font-size:12px; }
-
-    /* small helpers */
-    .muted { color:rgba(230,238,248,0.6); font-size:13px; }
-    a.inline { color:#9fb7ff; text-decoration:none; }
-
-    /* small fallback icon style if img fails */
-    .icon-fallback {
-      width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,#64748b,#111827);display:inline-flex;align-items:center;justify-content:center;color:#fff;font-weight:700;font-size:16px;
-    }
-  </style>
   <script>
-  try {
-    if (sessionStorage.getItem("harDilSplash") !== "done") {
-      window.location.replace("splash.html");
-    }
-  } catch (e) {}
-</script>
-
+    try {
+      if (sessionStorage.getItem("harDilSplash") !== "done") {
+        window.location.replace("splash.html");
+      }
+    } catch (e) {}
+  </script>
 </head>
 
 <body>
+
 <header class="top-app-bar">
   <span class="top-app-title">❤️ HarDil</span>
 
@@ -108,16 +36,14 @@
     <a href="legal.html">Legal</a>
   </nav>
 
-  <span class="menu-icon" id="openMenu" aria-label="Open menu" role="button">☰</span>
+  <span class="menu-icon" id="openMenu">☰</span>
 </header>
 
-<!-- DRAWER -->
 <aside class="drawer" id="drawer" aria-hidden="true">
   <div class="drawer-header">
     <strong>HarDil</strong>
-    <button id="closeMenu" aria-label="Close menu">✕</button>
+    <button id="closeMenu">✕</button>
   </div>
-
   <div class="drawer-content">
     <h4>Navigate</h4>
     <a href="#social">🌐 Social</a>
@@ -128,25 +54,21 @@
     <a href="#travel">✈️ Travel</a>
     <a href="#rides">🚕 Rides</a>
     <a href="#food">🍔 Food</a>
-    <a href="#grocery">🛒 Grocery & Essentials</a>
+    <a href="#grocery">🛒 Grocery</a>
     <a href="#health">🩺 Health</a>
     <a href="#sports">🏏 Sports</a>
     <a href="#learning">🧠 Learning</a>
-
     <h4>Support</h4>
     <a href="mailto:aghari128@gmail.com">Contact</a>
   </div>
 </aside>
 
-<div class="backdrop" id="backdrop" aria-hidden="true"></div>
+<div class="backdrop" id="backdrop"></div>
 
 <section class="hero">
   <h1>HarDil</h1>
   <p>Family First · One Place for Everything</p>
 </section>
-
-<main class="app">
-
   <!-- 🌐 SOCIAL -->
   <section class="card" id="social">
     <h2>🌐 Social</h2>
@@ -627,67 +549,34 @@ const openMenu = document.getElementById('openMenu');
 const closeMenu = document.getElementById('closeMenu');
 const backdrop = document.getElementById('backdrop');
 
-openMenu && openMenu.addEventListener('click', () => {
+openMenu.onclick = () => {
   drawer.classList.add('open');
   backdrop.classList.add('show');
-  drawer.setAttribute('aria-hidden','false');
-  backdrop.setAttribute('aria-hidden','false');
-});
+};
 
-closeMenu && closeMenu.addEventListener('click', () => {
+closeMenu.onclick = backdrop.onclick = () => {
   drawer.classList.remove('open');
   backdrop.classList.remove('show');
-  drawer.setAttribute('aria-hidden','true');
-  backdrop.setAttribute('aria-hidden','true');
-});
+};
 
-backdrop && backdrop.addEventListener('click', () => {
-  drawer.classList.remove('open');
-  backdrop.classList.remove('show');
-  drawer.setAttribute('aria-hidden','true');
-  backdrop.setAttribute('aria-hidden','true');
-});
-
-/* App tile clicks – open in new tab safely */
+/* App tile click */
 document.querySelectorAll('.app-btn').forEach(btn => {
-  btn.addEventListener('click', () => {
+  btn.onclick = () => {
     const url = btn.dataset.url;
-    if (!url) return;
-    try {
-      window.open(url, '_blank', 'noopener');
-    } catch (e) {
-      // fallback
-      location.href = url;
-    }
-  });
+    if (url) window.open(url, '_blank', 'noopener');
+  };
 });
 
-/* Graceful fallback: if image fails, show text-first letter block */
+/* Image fallback */
 document.querySelectorAll('.app-btn img').forEach(img => {
-  img.addEventListener('error', () => {
-    const parent = img.parentElement;
-    if (!parent) return;
-    img.style.display = 'none';
-    const label = parent.querySelector('span')?.textContent || '';
-    const fallback = document.createElement('div');
-    fallback.className = 'icon-fallback';
-    fallback.textContent = (label.trim().charAt(0) || '?').toUpperCase();
-    parent.insertBefore(fallback, parent.firstChild);
-  });
-});
-
-/* Smooth scroll for drawer links that point to sections */
-document.querySelectorAll('.drawer-content a[href^="#"]').forEach(link => {
-  link.addEventListener('click', (e) => {
-    e.preventDefault();
-    const id = link.getAttribute('href').slice(1);
-    const el = document.getElementById(id);
-    if (el) {
-      drawer.classList.remove('open');
-      backdrop.classList.remove('show');
-      el.scrollIntoView({behavior: 'smooth', block: 'start'});
-    }
-  });
+  img.onerror = () => {
+    const p = img.parentElement;
+    img.remove();
+    const f = document.createElement('div');
+    f.className = 'icon-fallback';
+    f.textContent = (p.querySelector('span')?.textContent || '?')[0];
+    p.prepend(f);
+  };
 });
 </script>
 
