--- a/index.html
+++ b/index.html
@@ -538,9 +538,17 @@
 
 <footer class="footer">
   HarDil strictly redirects users to official websites only.<br>
-  No logins stored · No payments · No betting.<br>
+  No logins stored · No payments · No betting.<br><br>
+
+  <a href="about.html">About</a> ·
+  <a href="motive.html">Motive</a> ·
+  <a href="privacy.html">Privacy</a> ·
+  <a href="terms.html">Terms</a> ·
+  <a href="legal.html">Legal</a><br><br>
+
   App rights belong to <strong>Hari & Dileep</strong>.
 </footer>
+
 
 <script>
 /* Drawer toggle */
