--- a/index.html
+++ b/index.html
@@ -537,17 +537,24 @@
 </main>
 
 <footer class="footer">
-  HarDil strictly redirects users to official websites only.<br>
-  No logins stored · No payments · No betting.<br><br>
+  <p class="footer-note">
+    HarDil strictly redirects users to official websites only.<br>
+    No logins stored · No payments · No betting.
+  </p>
 
-  <a href="about.html">About</a> ·
-  <a href="motive.html">Motive</a> ·
-  <a href="privacy.html">Privacy</a> ·
-  <a href="terms.html">Terms</a> ·
-  <a href="legal.html">Legal</a><br><br>
+  <nav class="footer-links">
+    <a href="about.html">About</a>
+    <a href="motive.html">Motive</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="terms.html">Terms</a>
+    <a href="legal.html">Legal</a>
+  </nav>
 
-  App rights belong to <strong>Hari & Dileep</strong>.
+  <p class="footer-rights">
+    App rights belong to <strong>Hari &amp; Dileep</strong>.
+  </p>
 </footer>
+
 
 
 <script>
