--- a/splash.html
+++ b/splash.html
@@ -24,10 +24,7 @@ body {
 .splash-bg {
   position: fixed;
   inset: 0;
-  background-image: url("assets/images/splash-bg.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url("assets/images/splash-bg.jpg") center / cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,8 +43,8 @@ body {
 /* ================= CENTER ================= */
 .center {
   position: relative;
-  width: 320px;
-  height: 320px;
+  width: 208px;   /* 35% smaller */
+  height: 208px;  /* 35% smaller */
 }
 
 /* ================= LOGO ================= */
@@ -63,22 +60,23 @@ body {
 }
 
 .logo {
-  font-size: 8.6rem;
+  font-size: 5.6rem;        /* 35% smaller */
   font-weight: 900;
-  letter-spacing: 6px;
+  letter-spacing: 4px;      /* 35% smaller */
   color: #ffffff;
   text-shadow:
-    0 0 22px rgba(236,72,153,0.9),
-    0 0 52px rgba(236,72,153,0.6),
-    0 0 95px rgba(236,72,153,0.4);
+    0 0 14px rgba(236,72,153,0.9),
+    0 0 34px rgba(236,72,153,0.6),
+    0 0 62px rgba(236,72,153,0.4);
 }
 
 .tagline {
-  margin-top: 14px;
-  font-size: 1.35rem;
+  margin-top: 9px;          /* 35% smaller */
+  font-size: 0.88rem;       /* 35% smaller */
   font-weight: 600;
   color: #ffffff;
   text-align: center;
+  line-height: 1.25;
 }
 
 /* ================= ICON ORBITS ================= */
@@ -98,12 +96,12 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(185px, -50%);
-  font-size: 2.6rem;
+  transform: translate(120px, -50%); /* 35% smaller radius */
+  font-size: 1.7rem;                 /* 35% smaller */
   color: #ffffff;
   text-shadow:
-    0 0 12px rgba(236,72,153,0.9),
-    0 0 30px rgba(236,72,153,0.6);
+    0 0 8px rgba(236,72,153,0.9),
+    0 0 20px rgba(236,72,153,0.6);
 }
 
 /* ================= ANIMATIONS ================= */
@@ -125,12 +123,12 @@ body {
 
 @keyframes logoReveal {
   0% { opacity: 0; transform: scale(0.5); }
-  70% { opacity: 1; transform: scale(1.08); }
+  70% { opacity: 1; transform: scale(1.06); }
   100% { opacity: 1; transform: scale(1); }
 }
 
 @keyframes fadeUp {
-  from { opacity: 0; transform: translateY(14px); }
+  from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
 }
 
@@ -140,8 +138,8 @@ body {
 }
 
 @keyframes counterSpin {
-  from { transform: translate(185px, -50%) rotate(0deg); }
-  to { transform: translate(185px, -50%) rotate(-360deg); }
+  from { transform: translate(120px, -50%) rotate(0deg); }
+  to { transform: translate(120px, -50%) rotate(-360deg); }
 }
 </style>
 </head>
@@ -196,7 +194,7 @@ setTimeout(() => {
   );
 }, 2600);
 
-/* ✅ 5.5s → redirect */
+/* 5.5s → redirect */
 setTimeout(() => {
   sessionStorage.setItem("harDilSplash", "done");
   window.location.href = "index.html";
