--- a/splash.html
+++ b/splash.html
@@ -10,7 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Inter", system-ui, -apple-system, sans-serif;
+  font-family: Inter, system-ui, sans-serif;
 }
 
 body {
@@ -20,7 +20,7 @@ body {
   background: #000;
 }
 
-/* ================= BACKGROUND ================= */
+/* BACKGROUND */
 .splash-bg {
   position: fixed;
   inset: 0;
@@ -35,19 +35,19 @@ body {
   inset: 0;
   background: radial-gradient(
     circle at center,
-    rgba(0,0,0,0.15),
-    rgba(0,0,0,0.85)
+    rgba(0,0,0,0.2),
+    rgba(0,0,0,0.9)
   );
 }
 
-/* ================= CENTER ================= */
+/* CENTER (50% smaller) */
 .center {
   position: relative;
-  width: 208px;   /* 35% smaller */
-  height: 208px;  /* 35% smaller */
+  width: 160px;
+  height: 160px;
 }
 
-/* ================= LOGO ================= */
+/* LOGO */
 .logo-wrap {
   position: absolute;
   inset: 0;
@@ -60,26 +60,25 @@ body {
 }
 
 .logo {
-  font-size: 5.6rem;        /* 35% smaller */
+  font-size: 4.2rem;   /* 🔻 MUCH smaller */
   font-weight: 900;
-  letter-spacing: 4px;      /* 35% smaller */
-  color: #ffffff;
+  letter-spacing: 3px;
+  color: #fff;
   text-shadow:
-    0 0 14px rgba(236,72,153,0.9),
-    0 0 34px rgba(236,72,153,0.6),
-    0 0 62px rgba(236,72,153,0.4);
+    0 0 10px rgba(236,72,153,0.9),
+    0 0 22px rgba(236,72,153,0.6);
 }
 
 .tagline {
-  margin-top: 9px;          /* 35% smaller */
-  font-size: 0.88rem;       /* 35% smaller */
+  margin-top: 6px;
+  font-size: 0.75rem;  /* 🔻 clearly smaller */
   font-weight: 600;
-  color: #ffffff;
+  color: #fff;
   text-align: center;
-  line-height: 1.25;
+  line-height: 1.2;
 }
 
-/* ================= ICON ORBITS ================= */
+/* ORBITS */
 .orbits {
   position: absolute;
   inset: 0;
@@ -96,39 +95,28 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(120px, -50%); /* 35% smaller radius */
-  font-size: 1.7rem;                 /* 35% smaller */
-  color: #ffffff;
+  transform: translate(90px, -50%); /* 🔻 much closer */
+  font-size: 1.3rem;                /* 🔻 smaller icons */
+  color: #fff;
   text-shadow:
-    0 0 8px rgba(236,72,153,0.9),
-    0 0 20px rgba(236,72,153,0.6);
+    0 0 6px rgba(236,72,153,0.9),
+    0 0 14px rgba(236,72,153,0.6);
 }
 
-/* ================= ANIMATIONS ================= */
-.show-logo {
-  animation: logoReveal 1s ease forwards;
-}
-
-.show-tagline {
-  animation: fadeUp 0.6s ease forwards;
-}
-
-.start-orbit {
-  animation: orbitSpin 4s linear infinite;
-}
-
-.start-counter {
-  animation: counterSpin 4s linear infinite;
-}
+/* ANIMATIONS */
+.show-logo { animation: logoReveal 1s ease forwards; }
+.show-tagline { animation: fadeUp .6s ease forwards; }
+.start-orbit { animation: orbitSpin 4s linear infinite; }
+.start-counter { animation: counterSpin 4s linear infinite; }
 
 @keyframes logoReveal {
-  0% { opacity: 0; transform: scale(0.5); }
-  70% { opacity: 1; transform: scale(1.06); }
+  0% { opacity: 0; transform: scale(.5); }
+  70% { opacity: 1; transform: scale(1.05); }
   100% { opacity: 1; transform: scale(1); }
 }
 
 @keyframes fadeUp {
-  from { opacity: 0; transform: translateY(10px); }
+  from { opacity: 0; transform: translateY(8px); }
   to { opacity: 1; transform: translateY(0); }
 }
 
@@ -138,8 +126,8 @@ body {
 }
 
 @keyframes counterSpin {
-  from { transform: translate(120px, -50%) rotate(0deg); }
-  to { transform: translate(120px, -50%) rotate(-360deg); }
+  from { transform: translate(90px, -50%) rotate(0deg); }
+  to { transform: translate(90px, -50%) rotate(-360deg); }
 }
 </style>
 </head>
@@ -151,7 +139,6 @@ body {
 
   <div class="center">
 
-    <!-- ICONS -->
     <div class="orbits" id="orbits">
       <div class="orbit" style="--i:0"><span class="icon">🌐</span></div>
       <div class="orbit" style="--i:1"><span class="icon">💼</span></div>
@@ -164,37 +151,30 @@ body {
       <div class="orbit" style="--i:8"><span class="icon">🍔</span></div>
     </div>
 
-    <!-- LOGO -->
     <div class="logo-wrap" id="logoWrap">
       <div class="logo">HD</div>
-      <div class="tagline" id="tagline">
-        Family First · One Place for Everything
-      </div>
+      <div class="tagline">Family First · One Place for Everything</div>
     </div>
 
   </div>
 </div>
 
 <script>
-/* 0–1.2s → background only */
 setTimeout(() => {
   const logoWrap = document.getElementById("logoWrap");
   logoWrap.style.opacity = 1;
   logoWrap.classList.add("show-logo");
-  document.getElementById("tagline").classList.add("show-tagline");
 }, 1200);
 
-/* 2.6s → icons start */
 setTimeout(() => {
   const orbits = document.getElementById("orbits");
   orbits.style.opacity = 1;
   orbits.classList.add("start-orbit");
-  document.querySelectorAll(".icon").forEach(icon =>
-    icon.classList.add("start-counter")
+  document.querySelectorAll(".icon").forEach(i =>
+    i.classList.add("start-counter")
   );
 }, 2600);
 
-/* 5.5s → redirect */
 setTimeout(() => {
   sessionStorage.setItem("harDilSplash", "done");
   window.location.href = "index.html";
