--- a/splash.html
+++ b/splash.html
@@ -20,7 +20,7 @@ body {
   background: #000;
 }
 
-/* BACKGROUND */
+/* ================= BACKGROUND ================= */
 .splash-bg {
   position: fixed;
   inset: 0;
@@ -40,14 +40,14 @@ body {
   );
 }
 
-/* CENTER (50% smaller) */
+/* ================= CENTER ================= */
 .center {
   position: relative;
-  width: 160px;
-  height: 160px;
+  width: 220px;
+  height: 220px;
 }
 
-/* LOGO */
+/* ================= LOGO ================= */
 .logo-wrap {
   position: absolute;
   inset: 0;
@@ -60,25 +60,25 @@ body {
 }
 
 .logo {
-  font-size: 4.2rem;   /* 🔻 MUCH smaller */
+  font-size: 5.6rem;
   font-weight: 900;
-  letter-spacing: 3px;
-  color: #fff;
+  letter-spacing: 4px;
+  color: #ffffff;
   text-shadow:
-    0 0 10px rgba(236,72,153,0.9),
-    0 0 22px rgba(236,72,153,0.6);
+    0 0 14px rgba(236,72,153,0.9),
+    0 0 34px rgba(236,72,153,0.5);
 }
 
 .tagline {
-  margin-top: 6px;
-  font-size: 0.75rem;  /* 🔻 clearly smaller */
+  margin-top: 8px;
+  font-size: 0.95rem;
   font-weight: 600;
-  color: #fff;
+  color: #ffffff;
   text-align: center;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 
-/* ORBITS */
+/* ================= ICON ORBITS ================= */
 .orbits {
   position: absolute;
   inset: 0;
@@ -95,22 +95,22 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(90px, -50%); /* 🔻 much closer */
-  font-size: 1.3rem;                /* 🔻 smaller icons */
-  color: #fff;
+  transform: translate(120px, -50%);
+  font-size: 1.7rem;
+  color: #ffffff;
   text-shadow:
     0 0 6px rgba(236,72,153,0.9),
-    0 0 14px rgba(236,72,153,0.6);
+    0 0 16px rgba(236,72,153,0.5);
 }
 
-/* ANIMATIONS */
+/* ================= ANIMATIONS ================= */
 .show-logo { animation: logoReveal 1s ease forwards; }
-.show-tagline { animation: fadeUp .6s ease forwards; }
+.show-tagline { animation: fadeUp 0.6s ease forwards; }
 .start-orbit { animation: orbitSpin 4s linear infinite; }
 .start-counter { animation: counterSpin 4s linear infinite; }
 
 @keyframes logoReveal {
-  0% { opacity: 0; transform: scale(.5); }
+  0% { opacity: 0; transform: scale(0.6); }
   70% { opacity: 1; transform: scale(1.05); }
   100% { opacity: 1; transform: scale(1); }
 }
@@ -126,8 +126,29 @@ body {
 }
 
 @keyframes counterSpin {
-  from { transform: translate(90px, -50%) rotate(0deg); }
-  to { transform: translate(90px, -50%) rotate(-360deg); }
+  from { transform: translate(120px, -50%) rotate(0deg); }
+  to { transform: translate(120px, -50%) rotate(-360deg); }
+}
+
+/* ================= MOBILE ================= */
+@media (max-width: 600px) {
+  .center {
+    width: 190px;
+    height: 190px;
+  }
+
+  .logo {
+    font-size: 4.6rem;
+  }
+
+  .icon {
+    transform: translate(100px, -50%);
+    font-size: 1.4rem;
+  }
+
+  .tagline {
+    font-size: 0.85rem;
+  }
 }
 </style>
 </head>
@@ -139,6 +160,7 @@ body {
 
   <div class="center">
 
+    <!-- ICONS -->
     <div class="orbits" id="orbits">
       <div class="orbit" style="--i:0"><span class="icon">🌐</span></div>
       <div class="orbit" style="--i:1"><span class="icon">💼</span></div>
@@ -151,6 +173,7 @@ body {
       <div class="orbit" style="--i:8"><span class="icon">🍔</span></div>
     </div>
 
+    <!-- LOGO -->
     <div class="logo-wrap" id="logoWrap">
       <div class="logo">HD</div>
       <div class="tagline">Family First · One Place for Everything</div>
@@ -161,10 +184,8 @@ body {
 
 <script>
 setTimeout(() => {
-  const logoWrap = document.getElementById("logoWrap");
-  logoWrap.style.opacity = 1;
-  logoWrap.classList.add("show-logo");
-}, 1200);
+  document.getElementById("logoWrap").classList.add("show-logo");
+}, 1000);
 
 setTimeout(() => {
   const orbits = document.getElementById("orbits");
@@ -173,12 +194,12 @@ setTimeout(() => {
   document.querySelectorAll(".icon").forEach(i =>
     i.classList.add("start-counter")
   );
-}, 2600);
+}, 2200);
 
 setTimeout(() => {
   sessionStorage.setItem("harDilSplash", "done");
   window.location.href = "index.html";
-}, 5500);
+}, 5200);
 </script>
 
 </body>
