--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
 <header class="top-app-bar">
-  <span class="top-app-title">HarDil❤️</span>
+  <span class="top-app-title">HarDil</span>
 
   <nav class="top-actions">
     <a href="about.html">About</a>
