--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
     <h4>Support</h4>
     <a href="mailto:aghari128@gmail.com">Contact</a>
   </div>
+  <div class="drawer-content mobile-only-links">
+  <h4>Info</h4>
+    <a href="about.html">About</a>
+    <a href="motive.html">Motive</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="terms.html">Terms</a>
+    <a href="legal.html">Legal</a>
+  </div>
+
 </aside>
 
 <div class="backdrop" id="backdrop"></div>
